tests/parsing/smtlib/mcil/errors/238_define-system_bad_attribute_3.mcil
(define-system system :subsys (a s) :query)